--- a/src/sample/login.fxml
+++ b/src/sample/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -9,8 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <Pane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: #80deea;">
          <children>
@@ -35,7 +35,7 @@
       </Label>
       <Label fx:id="loginStatus" layoutX="299.0" layoutY="49.0" prefHeight="17.0" prefWidth="300.0" textFill="#f80000" />
       <JFXTextField fx:id="username" layoutX="355.0" layoutY="103.0" prefHeight="25.0" prefWidth="183.0" promptText="username" />
-      <JFXTextField fx:id="password" layoutX="355.0" layoutY="145.0" prefHeight="25.0" prefWidth="183.0" promptText="password" />
-      <JFXButton fx:id="btnlogin" layoutX="355.0" layoutY="188.0" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: #80deea;" text="Login" />
+      <JFXButton fx:id="btnLogin" layoutX="355.0" layoutY="188.0" onAction="#Login" prefHeight="25.0" prefWidth="183.0" style="-fx-background-color: #80deea;" text="Login" />
+      <JFXPasswordField fx:id="password" layoutX="355.0" layoutY="146.0" prefHeight="25.0" prefWidth="183.0" promptText="password" />
    </children>
 </AnchorPane>
